# holochain_dao_multisig

./: Readme.md  charlie.keystore  config.nix  graphql_methods.json
dna/: app.json  charlie.keystore  conductor-alice.toml  conductor-bob.toml  conductor-config.toml  conductor-prod.toml
dna/constants/: Cargo.toml
dna/constants/src/: lib.rs
dna/lib/constants/src/: lib.rs
dna/lib/decoders/: Cargo.toml
dna/lib/decoders/src/: lib.rs
dna/lib/structures/: Cargo.toml
dna/lib/structures/src/: lib.rs
dna/test/: index.js  package-lock.json
dna/zomes/companies/: zome.json
dna/zomes/companies/code/: .hcbuild  Cargo.toml
dna/zomes/companies/code/src/: lib.rs
dna/zomes/create_multisig/code/src/: lib.rs
dna/zomes/multisig/code/: Cargo.toml
dna/zomes/multisig/code/src/: helpers.rs  lib.rs  member.rs  members.rs  multisig.rs  structures.rs  transaction.rs
dna/zomes/organizations/: zome.json
dna/zomes/organizations/code/: .hcbuild  Cargo.toml
dna/zomes/organizations/code/src/: employee.rs  lib.rs  organization.rs
ui/client/: .env  package-lock.json  package.json
ui/client/src/: index.tsx  mutations.tsx  queries.tsx  react-app-env.d.ts  resolvers.tsx  styles.js  susbcriptions.tsx
ui/client/src/common/: constants.tsx  helpers.tsx
ui/client/src/components/: add_new_member.tsx  alert.tsx  card.tsx  change_requirement.tsx  create-multisig-form.tsx  dashboard.tsx  error.tsx  global-containers.tsx  index.tsx  info-container.tsx  modal.tsx  remove_member.tsx  start.tsx
ui/client/src/components/multisig/: add_new_member.tsx  change_requirement.tsx  create_organization.tsx  index.tsx  pending_transactions.tsx  remove_member.tsx
ui/client/src/pages/: approved_transactions.tsx  dashboard.tsx  index.tsx  main.tsx  organizations.tsx  pending_transactions.tsx  selector.tsx  start.tsx
ui/client/src/pages/organizations/: my_organizations.tsx  organization.tsx  organizations.tsx
ui/server/: .env  package-lock.json  package.json
ui/server/src/: config.js  index.js  resolvers.js  schema.js
ui/server/src/datasources/: helpers.js  multisig.js  organizations.js
