[package]
name = "decoders"
version = "0.1.0"
authors = ["sdelvalle57"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_json = { version = "1.0.47", features = ["preserve_order"] }
serde_derive = "1.0.104"
hdk = "=0.0.50-alpha4"
hdk_proc_macros = "=0.0.50-alpha4"
holochain_wasm_utils = "=0.0.50-alpha4"
holochain_json_derive = "0.0.23"
holochain_json_api = "0.0.23"
structures = { path = "../structures" }

[lib]
crate-type = ["lib"]