[package]
name = "organizations"
version = "0.1.0"
authors = ["hc-scaffold-framework"]
edition = "2018"

[dependencies]
serde = "1.0.104"
serde_json = { version = "1.0.47", features = ["preserve_order"] }
serde_derive = "1.0.104"
hdk = "=0.0.51-alpha1"
hdk_proc_macros = "=0.0.51-alpha1"
holochain_wasm_utils = "=0.0.51-alpha1"
holochain_json_derive = "0.0.23"
constants = { path = "../../../lib/constants/" }
decoders = { path = "../../../lib/decoders" }
structures = { path = "../../../lib/structures" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
